--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,21 @@
     "sourceMap": true
   },
   "files": [
-    "./src/app/app.ts",
-    "./src/app/LoggedInOutlet.ts",
     "./src/common/headers.ts",
     "./src/constants/appconstants.ts",
-    "./src/home/home.ts",
     "./src/index.ts",
-    "./src/login/login.ts",
-    "./src/signup/signup.ts"
+    "./src/pages/app/app.ts",
+    "./src/pages/app/LoggedInOutlet.ts",
+    "./src/pages/dashboard/dashboard.ts",
+    "./src/pages/grid/components/grid.ts",
+    "./src/pages/home/home.ts",
+    "./src/pages/login/login.ts",
+    "./src/pages/signup/signup.ts",
+    "./src/pages/usuario/index.ts",
+    "./src/pages/usuario/usuario.component.spec.ts",
+    "./src/pages/usuario/usuario.component.ts",
+    "./src/widgets/sidebar/components/sidebar.ts",
+    "./src/widgets/topnav/components/topnav.ts"
   ],
   "filesGlob": [
     "./src/**/*.ts",
