--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular2-authentication-sample",
+  "name": "desa-siig",
   "version": "0.0.1",
   "description": "This is a sample that shows how to add authentication to an Angular 2 (ng2) app",
-  "main": "",
+  "main": "angular-cli-build.js",
   "scripts": {
     "server": "cd backend && npm i && node server.js",
     "front": "webpack-dev-server --inline -d --colors --display-error-details --display-cached --port 3000",
@@ -11,10 +11,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/auth0/angular2-authentication-sample.git"
+    "url": "git+https://github.com/auth0/angular2-authentication-sample.git"
   },
   "contributors": [
-    "Martin Gontovnikas (http://gon.to) <martin@gon.to>",
+    "Martin Gontovnikas <martin@gon.to> (http://gon.to)",
     "PatrickJS <github@gdi2290.com>",
     "Ryan Chenkie <ryanchenkie@gmail.com>"
   ],
@@ -40,6 +40,8 @@
     "es6-shim": "^0.33.13",
     "es7-reflect-metadata": "^1.6.0",
     "jwt-decode": "^1.5.1",
+    "ng2-bs3-modal": "^0.6.1",
+    "ng2-file-upload-modal": "^1.0.0",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "~0.6.12"
   },
@@ -62,5 +64,6 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
-  }
+  },
+  "author": ""
 }
