--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "es6-shim": "^0.33.13",
     "es7-reflect-metadata": "^1.6.0",
     "jwt-decode": "^1.5.1",
+    "ng2-bootstrap": "^1.0.17",
     "ng2-bs3-modal": "^0.6.1",
     "ng2-file-upload-modal": "^1.0.0",
     "rxjs": "5.0.0-beta.6",
